force-app/main/default/objects/Dynamic_Form_Config__c/Dynamic_Form_Config__c.object-meta.xml
<CustomObject>
    <label>Form Wizard Config</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Form Wizard Config Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Wizard Configs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>