force-app/main/default/objects/Dynamic_Form_Config__c/fields/Form_Config__c.field-meta.xml
<CustomField>
    <fullName>Form_Config__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Form Config</label>
    <length>130000</length>
    <type>LongTextArea</type>
</CustomField>