force-app/main/default/objects/Dynamic_Form_Config__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>