force-app/main/default/objects/Dynamic_Form_Config__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Title</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>