force-app/main/default/objects/Dynamic_Form_Config__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Form_Config__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>