force-app/main/default/objects/Dynamic_Form_Config__c/listViews/all2.listView-meta.xml
<ListView>
    <fullName>all2</fullName>
    <columns>NAME</columns>
    <columns>Label__c</columns>
    <columns>Form_Config__c</columns>
    <columns>Title__c</columns>
    <filterScope>Mine</filterScope>
    <label>all2</label>
</ListView>